{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 566,
  "lineage": "ce0b21e8-d0e5-1f7b-370d-db8945a953de",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913123310997:route-table/rtb-0b9bdfd5b50370081",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-08c77b2bc297ed9e9",
                "route_table_id": "rtb-0b9bdfd5b50370081",
                "subnet_id": "subnet-04cc462043523dcb9"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0b9bdfd5b50370081",
            "owner_id": "913123310997",
            "region": "us-east-1",
            "route_table_id": "rtb-0b9bdfd5b50370081",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0031d1bc2fb2d8132",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-04cc462043523dcb9",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-principal-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0220b63692086a550"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913123310997:route-table/rtb-095dc3c28d7bf6a82",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-079c94d3af9e93ea7",
                "route_table_id": "rtb-095dc3c28d7bf6a82",
                "subnet_id": "subnet-0254c9d900c8b2fdc"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-095dc3c28d7bf6a82",
            "owner_id": "913123310997",
            "region": "us-east-1",
            "route_table_id": "rtb-095dc3c28d7bf6a82",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04650bf48631fee03",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0254c9d900c8b2fdc",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-principal-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0220b63692086a550"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913123310997:subnet/subnet-04cc462043523dcb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 217,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cc462043523dcb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913123310997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-principal-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0220b63692086a550"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913123310997:subnet/subnet-0254c9d900c8b2fdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 225,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0254c9d900c8b2fdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913123310997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-principal-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0220b63692086a550"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913123310997:security-group/sg-0bde817bc2434e22e",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bde817bc2434e22e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoints-sg-dev",
            "name_prefix": "",
            "owner_id": "913123310997",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vpc-endpoints-sg-dev",
              "Project": "rag-agents"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "vpc-endpoints-sg-dev",
              "Project": "rag-agents"
            },
            "timeouts": null,
            "vpc_id": "vpc-0220b63692086a550"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913123310997:vpc-endpoint/vpce-033b6996a681739c1",
            "dns_entry": [
              {
                "dns_name": "vpce-033b6996a681739c1-j5y5ndo9.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-033b6996a681739c1-j5y5ndo9-us-east-1c.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-033b6996a681739c1-j5y5ndo9-us-east-1b.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock-runtime.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06129901YW045QHU0G0P"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-033b6996a681739c1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0136c991d5ef19005",
              "eni-0c8e98f26facf1a5b"
            ],
            "owner_id": "913123310997",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bde817bc2434e22e"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock-runtime",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.204",
                "subnet_id": "subnet-04cc462043523dcb9"
              },
              {
                "ipv4": "10.0.3.73",
                "subnet_id": "subnet-0254c9d900c8b2fdc"
              }
            ],
            "subnet_ids": [
              "subnet-0254c9d900c8b2fdc",
              "subnet-04cc462043523dcb9"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bedrock-endpoint-dev",
              "Project": "rag-agents"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bedrock-endpoint-dev",
              "Project": "rag-agents"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0220b63692086a550"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913123310997:vpc-endpoint/vpce-0ff53429a66a1dabb",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ff53429a66a1dabb",
            "ip_address_type": "ipv4",
            "owner_id": "913123310997",
            "policy": "{\"Statement\":[{\"Action\":\"s3:*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\",\"Sid\":\"AllowAll\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-095dc3c28d7bf6a82",
              "rtb-0b9bdfd5b50370081"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "s3-endpoint-dev",
              "Project": "rag-agents"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "s3-endpoint-dev",
              "Project": "rag-agents"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0220b63692086a550"
          },
          "dependencies": [
            "data.aws_route_table.selected"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913123310997:security-group/sg-02ea4f89d2b3ef1d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ea4f89d2b3ef1d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "aurora-pg-sg-dev",
            "name_prefix": "",
            "owner_id": "913123310997",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0220b63692086a550"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}